--- a/FrontEnd/css/custom.css
+++ b/FrontEnd/css/custom.css
@@ -19,7 +19,7 @@ body{
 
 .EmiCard{
 
-    height: 300px;
+    height: 330px;
     background-color: rgba(235, 236, 236, 0.521);
     display: inline-block;
     margin: auto;
@@ -28,7 +28,7 @@ body{
     padding: 20px;
     border-radius: 20px;
     box-shadow: 0px 0px 20px rgb(221, 221, 221);
-    margin-top: 8%;
+    margin-top: 3%;
     transition-property: all;
     transition-duration: 0.8s;
 }
@@ -76,19 +76,20 @@ body{
 .logout{
 
 margin-left: 90%;
+margin-top: 2%;
 outline: none;
   border: none;
   width: 120px;
   color: black;
   height: 40px;
   border-radius: 120px;
-  background-color: aqua;
+  /* background-color: rgb(255, 0, 191); */
   font-weight: bold;
 }
 
 .logout{
-    background-color:rgba(201, 252, 252, 0.781);
-  border:2px solid gold;
+    background-color:#ffa60086
+  /* border:2px solid gold; */
 }
 
 #LoanAmt{
@@ -100,4 +101,49 @@ outline: none;
     margin-top: 3%;
     width: 20%;
     min-height: 8%;
+}
+
+.ViewPur{ 
+margin-left: 88.9%;
+outline: none;
+border: none;
+color: rgb(255, 255, 255) !important;
+width: 120px;
+height: 40px;
+  border-radius: 120px;
+  padding: 20px;
+  text-decoration: none;
+  background-color: #7e7e7e;
+  font-weight: bold;
+}
+
+
+.Purchase{
+    margin-left: 28%;
+    outline: none;
+    border: none;
+    width: 110px;
+    margin-top: 4%;
+    margin-bottom: 2%;
+    color: black;
+    height: 40px;
+    border-radius: 10px;
+    color: white;
+    font-size: small;
+    background-color: #00bc8c;
+    font-weight: bold;
+}
+
+#svgVoid{
+    width: 320px;
+
+margin-top: 4%;
+}
+
+.text-warning{
+    color: #f39c12;
+    display: inline-block;
+}
+.EmiAmountMonthly2{
+    /* padding-bottom:100 px; */
 }
