--- a/FrontEnd/css/main.css
+++ b/FrontEnd/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 body{
   /* background-color: whitesmoke; */
@@ -8,6 +8,7 @@ body{
 .fill{
   text-align: center;
   color: black;
+  
 }
 
 .myForm{
@@ -15,6 +16,8 @@ body{
   padding: 90px;
   margin-left: 25%;
   border-radius: 12px;
+  font-weight: bold;
+  font-family: 'Poppins', sans-serif;
   background-color: aliceblue;
   box-shadow: 0px 0px 20px ghostwhite;
   margin-top: 2%;
@@ -67,3 +70,8 @@ body{
 
 }
 
+.form-group{
+  width: 80%;
+  margin-bottom: 4%;
+  padding-left: 10%;
+}
